# virelo

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  Virelo.spec  main.py  pyproject.toml
.github/workflows/: arm64-upstream-watch.yml  ci.yml
docs/: BUILD.md  RELEASE.md  TROUBLESHOOTING.md
frontend/: .prettierignore  eslint.config.js  index.html  package-lock.json  package.json  prettier.config.js  vite.config.js
frontend/src/: app.jsx  bridge.js  fatal-error.jsx  icons.jsx  main.jsx  pages.jsx  panels.jsx  primitives.jsx  theme.jsx
installer/: virelo.iss
requirements/: arm64-webengine-contract.json  build-constraints.txt
scripts/: audit_pyinstaller.py  bootstrap.ps1  build-app.ps1  build-common.ps1  build-frontend.ps1  build-icon.py  build-installer-bmps.py  build-installer.ps1  clean.ps1  pe_arch.py  probe_qt_webengine_capability.py  verify-release.ps1  verify_arm64_webengine_contract.py  verify_python_constraints.py  verify_python_environment.py  verify_qt_deployment.py  watch_pyside6_arm64.py
src/: windows_toolbox.py
tests/: conftest.py
tests/integration/: conftest.py  test_qt_service_roundtrips.py
tests/unit/: test_app_config.py  test_arm64_upstream_workflow.py  test_arm64_webengine_contract.py  test_audit_pyinstaller.py  test_branding_assets.py  test_bridge_payload.py  test_capture_guard.py  test_explorer_columns.py  test_explorer_engine_idle.py  test_explorer_service.py  test_explorer_views.py  test_key_validation.py  test_nchittest.py  test_paths.py  test_pe_arch.py  test_pyside6_arm64_watch.py  test_qt_webengine_capability.py  test_settings_bounds.py  test_settings_persistence_safety.py  test_settings_state.py  test_smoke_evidence.py  test_snap_borders.py  test_snap_geometry.py  test_snap_safety.py  test_startup_helpers.py  test_theme.py  test_verifier_cli_isolation.py  test_verify_python_constraints.py  test_verify_python_environment.py  test_verify_qt_deployment.py  test_web_navigation.py  test_win32_abi.py  test_window_lifecycle.py
virelo/: __init__.py  __main__.py
virelo/app/: __init__.py  __main__.py  config.py  webview.py  window.py  window_hit_test.py
virelo/bridge/: __init__.py  bridge.py  capture_guard.py
virelo/platform/: __init__.py  paths.py  resources.py  startup.py  theme.py  web_navigation.py  win32_abi.py  win32_helpers.py
virelo/services/: __init__.py  explorer_columns.py  explorer_constants.py  explorer_service.py  explorer_views.py  snap.py
virelo/settings/: __init__.py  key_validation.py  persistence.py  state.py
virelo/workers/: __init__.py  explorer.py  key_capture.py
(+6 files in other folders)
