[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "virelo"
version = "1.5.0"
description = "Windows desktop utility for window snapping and Explorer column auto-sizing"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [{name = "Yusuf Qwareeq"}]
dependencies = [
    "PySide6>=6.6",
    "keyboard>=0.13.5",
    "pywin32>=306",
    "comtypes>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.15.12",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
]
build = [
    "pyinstaller>=6.0",
    "pyinstaller-hooks-contrib>=2024.6",
]

[tool.setuptools.packages.find]
include = ["virelo*"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
"virelo/*/__init__.py" = ["F401"]
"Virelo.spec" = ["F821", "UP009"]
"tests/conftest.py" = ["E402"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "requires_qt: marks tests requiring PySide6/Qt (excluded from CI)",
]
