[build-system]
requires = ["setuptools==83.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "virelo"
dynamic = ["version"]
description = "Windows desktop utility for window snapping and Explorer column auto-sizing"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [{name = "Yusuf Qwareeq"}]
dependencies = [
    "PySide6>=6.6",
    "keyboard>=0.13.5",
    "pywin32>=306; sys_platform == 'win32'",
    "comtypes>=1.3.0; sys_platform == 'win32'",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.15.12",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
]
build = [
    "pyinstaller>=6.0",
    "pyinstaller-hooks-contrib>=2024.6",
]

[tool.setuptools.packages.find]
include = ["virelo*"]

[tool.setuptools.dynamic]
# The package version derives from APP_VERSION in virelo/app/config.py, the single source of truth.
# That module is pure constants with no imports, so the attr lookup is safe at build time.
version = {attr = "virelo.app.config.APP_VERSION"}

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
"virelo/*/__init__.py" = ["F401"]
"Virelo.spec" = ["F821", "UP009"]
"tests/conftest.py" = ["E402"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "requires_qt: marks tests requiring a real PySide6/Qt runtime",
]
